--- a/main.scss
+++ b/main.scss
@@ -95,7 +95,7 @@ main {
       padding: 5rem 8rem;
       display: flex;
       flex-wrap: wrap;
-      text-align: initial;
+      text-align: left;
     }
 
     & h1 {
